# jupyter-black

./: .gitignore  .python-version  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.md  dev-notes.md  flake.nix  mypy.ini  pyproject.toml  setup.cfg  test.ipynb  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-package.yml  python-publish.yml
src/jupyter_black/: __init__.py  jupyter_black.py
tests/: conftest.py  pyproject.toml  test_jb_helpers.py  test_jupyter_black.py  test_lab.py  test_notebook.py
