[build-system]
requires = ["setuptools>65", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
order_by_type = false
line_length = 79

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "jupyter_black.__version__"}
readme = {file = ["README.md", "CHANGELOG.md"], content-type = "text/markdown"}

[tool.mypy]
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
python_version = "3.11"
show_column_numbers = true
warn_incomplete_stub = false
warn_redundant_casts = true
warn_unused_ignores = true

[project]
name = "jupyter-black"
urls = {homepage = "https://github.com/n8henrie/jupyter-black"}
dynamic = ["version", "readme"]
license = { text = "MIT" }
description = "A simple extension for Jupyter Notebook and Jupyter Lab to beautify Python code automatically using Black. Fork of dnanhkhoa/nb_black."
authors = [ {name = "Nathan Henrie", email = "nate@n8henrie.com"} ]
keywords = [ "jupyter-black", ]
classifiers= [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "black >= 21",
    "ipython >= 7",
    "tokenize_rt >= 4",
]

[project.optional-dependencies]
test = [
    "flake8 == 3.9.2",
    "flake8-docstrings == 1.6.0",
    "flake8-import-order == 0.18.1",
    "isort == 5.11.5",
    "jupyterlab == 3.6.3",
    "mypy == 1.2.0",
    "pep8-naming == 0.12.1",
    "playwright == 1.14.1",
    "pytest == 7.3.1",
    "tox == 4.5.1",
]
dev = [
    "build == 0.9.0",
    "twine == 4.0.1",
    "wheel == 0.37.0",
]
