[build-system]
requires = ["setuptools>65", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
target-version = ['py38']

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "jupyter_black.__version__"}
readme = {file = ["README.md", "CHANGELOG.md"], content-type = "text/markdown"}

[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
show_column_numbers = true
warn_incomplete_stub = false
warn_redundant_casts = true
warn_unused_ignores = true

[project]
name = "jupyter-black"
urls = {homepage = "https://github.com/n8henrie/jupyter-black"}
dynamic = ["version", "readme"]
license = { text = "MIT" }
description = "A simple extension for Jupyter Notebook and Jupyter Lab to beautify Python code automatically using Black. Fork of dnanhkhoa/nb_black."
authors = [ {name = "Nathan Henrie", email = "nate@n8henrie.com"} ]
keywords = [ "jupyter-black", ]
classifiers= [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "black[jupyter] >= 21",
]

[project.optional-dependencies]
test = [
    "flake8 == 7",
    "flake8-docstrings == 1.7",
    "jupyterlab >= 4",
    "mypy == 1",
    "notebook >= 7",
    "pep8-naming == 0.14",
    "playwright == 1.46",
    "pytest == 8",
    "tox == 4",
]
dev = [
    "build == 1",
    "twine == 5",
]
