[metadata]
name = jupyter-black
url = https://github.com/n8henrie/jupyter-black
version = attr: jupyter_black.__version__
license = MIT
license_files = LICENSE
description = A package that does some stuff]: A simple extension for Jupyter Notebook and Jupyter Lab to beautify Python code automatically using Black. Fork of dnanhkhoa/nb_black.
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
author = Nathan Henrie
author_email = nate@n8henrie.com
keywords =
    black
    jupyter
    notebook
classifiers=
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    black >= 21.9b0, < 23
    ipython >= 7.27.0, < 8
    tokenize_rt >= 4.1.0, < 5

[options.extras_require]
test =
    flake8 >= 3.9.2, < 4
    flake8-docstrings >= 1.6.0, < 2
    flake8-import-order >= 0.18.1, < 0.19
    jupyterlab == 3.1.12
    mypy >= 0.910, < 1
    pep8-naming >= 0.12.1, < 0.13
    playwright >= 1.14.1, < 2
    pylint >= 2.10.2, < 2.11
    pytest >= 6.2.5, <7
    tox >= 3.24.3, < 4
dev =
    build >= 0.6.0.post1, < 0.7
    twine >= 3.4.2, < 4
    wheel >= 0.37.0, < 0.38

[options.packages.find]
where=src
